@@ -152,6 +152,7 @@
                     <property name="wrap_mode">word-char</property>
                     <property name="buffer">textbuffer</property>
                     <signal name="key-press-event" handler="on_textview_key_press_event" swapped="no"/>
+                    <signal name="populate-popup" handler="on_textview_populate_popup" swapped="no"/>
                   </object>
                 </child>
               </object>
